[gd_scene load_steps=3 format=3 uid="uid://drgujmfx5n5f5"]

[ext_resource type="Script" path="res://prog_54c.gd" id="1_qaak7"]
[ext_resource type="Theme" uid="uid://b0cs0qqc6nrp7" path="res://Big_font.tres" id="2_dh6y4"]

[node name="prog54c" type="Node2D"]
script = ExtResource("1_qaak7")

[node name="Label" type="Label" parent="."]
offset_left = 77.0
offset_top = 32.0
offset_right = 312.0
offset_bottom = 90.0
text = "The Radius of the circle:"

[node name="Label2" type="Label" parent="."]
offset_left = 75.0
offset_top = 101.0
offset_right = 310.0
offset_bottom = 159.0
text = "The Area of the circle:"

[node name="Label3" type="Label" parent="."]
offset_left = 74.0
offset_top = 163.0
offset_right = 309.0
offset_bottom = 221.0
text = "The Circumference of the circle:"

[node name="Button" type="Button" parent="."]
offset_left = 33.0
offset_top = 217.0
offset_right = 176.0
offset_bottom = 301.0
theme = ExtResource("2_dh6y4")
text = "Show"

[node name="Button2" type="Button" parent="."]
offset_left = 214.0
offset_top = 219.0
offset_right = 357.0
offset_bottom = 303.0
theme = ExtResource("2_dh6y4")
text = "Clear"

[node name="Button3" type="Button" parent="."]
offset_left = 382.0
offset_top = 222.0
offset_right = 525.0
offset_bottom = 306.0
theme = ExtResource("2_dh6y4")
text = "Exit"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 273.0
offset_top = 20.0
offset_right = 443.0
offset_bottom = 80.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
